--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
     "antd": "^4.16.8",
+    "bootstrap": "^5.1.0",
+    "hamburger-react": "^2.4.1",
     "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.5",
+    "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
+    "reactstrap": "^8.9.0",
     "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
