--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^0.1.6",
+    "@radix-ui/react-hover-card": "^0.1.5",
     "antd": "^4.16.8",
     "bootstrap": "^5.1.0",
     "hamburger-react": "^2.4.1",
@@ -22,8 +24,8 @@
     "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.1",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
