--- a/package.json
+++ b/package.json
@@ -8,24 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.3.0",
-    "@heroicons/react": "^1.0.2",
-    "@radix-ui/react-dropdown-menu": "^0.1.6",
-    "@radix-ui/react-hover-card": "^0.1.5",
-    "antd": "^4.16.8",
-    "bootstrap": "^5.1.0",
-    "hamburger-react": "^2.4.1",
+    "@headlessui/react": "1.3.0",
+    "@heroicons/react": "1.0.2",
+    "@radix-ui/react-dropdown-menu": "0.1.6",
+    "@radix-ui/react-hover-card": "0.1.5",
+    "hamburger-react": "2.4.1",
     "next": "11.0.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.5",
-    "react-dom": "^17.0.2",
-    "react-intersection-observer": "^8.32.0",
-    "reactstrap": "^8.9.0",
-    "tailwind-scrollbar": "^1.3.1"
+    "react": "17.0.2",
+    "react-bootstrap": "2.0.0-beta.5",
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "8.32.0",
+    "tailwind-scrollbar": "1.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "10.4.2",
+    "postcss": "8.4.7",
+    "tailwindcss": "3.0.23"
   }
 }
