--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "1.0.2",
     "@radix-ui/react-dropdown-menu": "0.1.6",
     "@radix-ui/react-hover-card": "0.1.5",
+    "framer-motion": "^6.2.8",
     "hamburger-react": "2.4.1",
     "next": "11.0.1",
     "react": "17.0.2",
